Switching to maven build